resources/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://github.com/samueltauil/nodejs-welcome.git'
  name: nodejs-welcome
  namespace: welcome
  labels:
    app: nodejs-welcome
    app.kubernetes.io/component: nodejs-welcome
    app.kubernetes.io/instance: nodejs-welcome
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: nodejs-welcome
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: '12'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-welcome
  template:
    metadata:
      labels:
        app: nodejs-welcome
        deploymentconfig: nodejs-welcome
    spec:
      containers:
        - name: nodejs-welcome
          image: quay.io/stauil/nodejs-welcome:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
